Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1236

Reactor - segfault if connection address cannot be resolved

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • proton-0.13.0
    • proton-0.13.1
    • proton-c
    • None

    Description

      $ cd examples/python/reactor/send.py
      $ python ./send.py lolhost:9999/foo
      Segmentation fault (core dumped)

      Same action using 0.12.2 release:

      $ python ./send.py lolhost:9999/foo
      Condition('proton:io', 'getaddrinfo(lolhost, 9999/amq.topic): Servname not supported for ai_socktype')
      $

      Attachments

        Activity

          People

            kgiusti Ken Giusti
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: